--- a/web/admin_carpool_overview.html
+++ b/web/admin_carpool_overview.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Collapsible sidebar using Bootstrap 4</title>
+    <link rel="shortcut icon" href="img/favicon.png">
+    <title>EasyDriving</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -192,6 +193,9 @@
     <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
+    
+    <!-- Mit der Verlinkung auf die js kann die Autoübersicht aus der DB geholt werden -->
+    <script src="js/write_carpool_table.js"></script>
 
 
 </body>
