--- a/web/admin_carpool_new.html
+++ b/web/admin_carpool_new.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link rel="shortcut icon" href="img/favicon.png">
     <title>EasyDriving CarPool</title>
 
     <!-- Bootstrap CSS -->
@@ -137,6 +136,13 @@
                               </div>
                           </div>
                       </div>
+                      <div class="col-md-3">
+                          <div class="form-control-feedback">
+                                  <span class="text-danger align-middle">
+                                      <!-- Put name validation error messages here -->
+                                  </span>
+                          </div>
+                      </div>
                   </div>
                   <div class="row">
                       <div class="col-md-3 field-label-responsive">
@@ -151,6 +157,13 @@
                               </div>
                           </div>
                       </div>
+                      <div class="col-md-3">
+                          <div class="form-control-feedback">
+                                  <span class="text-danger align-middle">
+                                      <!-- Put e-mail validation error messages here -->
+                                  </span>
+                          </div>
+                      </div>
                   </div>
                   <div class="row">
                       <div class="col-md-3 field-label-responsive">
@@ -163,6 +176,13 @@
                                   <input type="text" name="kraftstoff" class="form-control" id="kraftstoff"
                                          placeholder="Benzin" required>
                               </div>
+                          </div>
+                      </div>
+                      <div class="col-md-3">
+                          <div class="form-control-feedback">
+                                  <span class="text-danger align-middle">
+                                      <i class="fas fa-times"></i> Example Error Message</i>
+                                  </span>
                           </div>
                       </div>
                   </div>
