--- a/web/admin_carpool_overview.html
+++ b/web/admin_carpool_overview.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <link rel="shortcut icon" href="img/favicon.png">
     <title>EasyDriving</title>
 
     <!-- Bootstrap CSS -->
@@ -129,8 +127,13 @@
           			<th data-field="id" data-filter-control="input" data-sortable="true">ID</th>
           			<th data-field="marke" data-filter-control="select" data-sortable="true">Marke</th>
           			<th data-field="modell" data-filter-control="select" data-sortable="true">Modell</th>
-          			<th data-field="kraftstoff" data-filter-control="select" data-sortable="true">Kraftstoff</th>
-                <th data-field="details" data-filter-control="select" data-sortable="true">Details</th>
+                <th data-field="kraftstoff" data-filter-control="select" data-sortable="true">Kraftstoff</th>
+          			<th data-field="schaltung" data-filter-control="select" data-sortable="true">Schaltung</th>
+                <th data-field="tueren" data-filter-control="select" data-sortable="true">Türen</th>
+                <th data-field="klima" data-filter-control="select" data-sortable="true">Klima</th>
+                <th data-field="navi" data-filter-control="select" data-sortable="true">Navigationsgerät</th>
+                <th data-field="raucherwagen" data-filter-control="select" data-sortable="true">Raucherwagen</th>
+                <th data-field="stellplatznummer" data-filter-control="select" data-sortable="true">Stellplatznummer</th>
           		</tr>
           	</thead>
             </table>
