--- a/web/admin_user_new.html
+++ b/web/admin_user_new.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link rel="shortcut icon" href="img/favicon.png">
     <title>EasyDriving CarPool</title>
 
     <!-- Bootstrap CSS -->
@@ -139,6 +138,13 @@
                               </div>
                           </div>
                       </div>
+                      <div class="col-md-3">
+                          <div class="form-control-feedback">
+                                  <span class="text-danger align-middle">
+                                      <!-- Put name validation error messages here -->
+                                  </span>
+                          </div>
+                      </div>
                   </div>
                   <div class="row">
                       <div class="col-md-3 field-label-responsive">
@@ -150,6 +156,13 @@
                                   <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
                                   <input type="text" name="emailneu" class="form-control" id="emailneu" placeholder="you@example.com" required autofocus />
                               </div>
+                          </div>
+                      </div>
+                      <div class="col-md-3">
+                          <div class="form-control-feedback">
+                                  <span class="text-danger align-middle">
+                                      <!-- Put e-mail validation error messages here -->
+                                  </span>
                           </div>
                       </div>
                   </div>
